--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,14 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
+  <meta property="og:title" content="Veysel Karaca">
+  <meta property="og:description" content="Veysel Karaca DevOps Specialist">
+  <meta property="og:image" content="https://veyselkaraca.com.tr.com/favicon.png">
+  <meta property="og:url" content="https://veyselkaraca.com.tr">
+  <meta name="twitter:title" content="Add title here">
+  <meta name="twitter:description" content="Veysel Karaca">
+  <meta name="twitter:url" content="https://veyselkaraca.com.tr.com/favicon.png">
+  <meta name="twitter:card" content="Veysel Karaca DevOps Specialist">
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
   <link rel="shortcut icon" type="image/ico" href="{{ '/assets/favicon.ico' }}" >
 </head>
