--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
   <meta name="twitter:card" content="Veysel Karaca DevOps Specialist">
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
   <link rel="shortcut icon" type="image/ico" href="{{ '/assets/favicon.ico' }}" >
+  <link rel="apple-touch-icon" href="{{ '/assets/favicon.ico' }}">
 </head>
