--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
-        <a class="link" href="https://blog.veyselkaraca.com.tr" data-scroll>Blog</a>
+        <a class="link" target="_blank" rel="noopener" href="https://blog.veyselkaraca.com.tr" data-scroll>Blog</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
