--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,10 @@
       </h1>
       <div class="header-icons">
         {% if site.email %}
-        <a aria-label="Send email" href="mailto:{{ site.email }}"><i class="icon fa fa-envelope"></i><div><p style="font-size: medium; color: #FFFFFF;text-decoration: none;">Mail</p></div></a>
+        <a aria-label="Send email" href="mailto:{{ site.email }}"><i class="icon fa fa-envelope"></i></a>
         {% endif %}
         {% if site.twitter_username %}
-        <a aria-label="My Twitter" target="_blank" rel="noopener" href="https://twitter.com/{{ site.twitter_username }}"><i class="icon fa fa-twitter" aria-hidden="true"></i><div><p style="font-size: medium; color: #FFFFFF;text-decoration: none;">Twitter</p></div></a>
+        <a aria-label="My Twitter" target="_blank" rel="noopener" href="https://twitter.com/{{ site.twitter_username }}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         {% endif %}
         {% if site.instagram_username %}
         <a aria-label="My Instagram" target="_blank" rel="noopener" href="https://www.instagram.com/{{ site.instagram_username }}"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
@@ -18,13 +18,13 @@
         <a aria-label="My Facebook" target="_blank" rel="noopener" href="https://www.facebook.com/{{ site.facebook_username }}"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
         {% endif %}
         {% if site.linkedin_username %}
-        <a aria-label="My LinkedIn" target="_blank" rel="noopener" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i><div><p style="font-size: medium; color: #FFFFFF;text-decoration: none;">LinkedIn</p></div></a>
+        <a aria-label="My LinkedIn" target="_blank" rel="noopener" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
         {% endif %}
         {% if site.github_username %}
-        <a aria-label="My Github" target="_blank" rel="noopener" href="https://github.com/{{ site.github_username }}"><i class="icon fa fa-github-alt" aria-hidden="true"></i><div><p style="font-size: medium; color: #FFFFFF;text-decoration: none;">Github</p></div></a>
+        <a aria-label="My Github" target="_blank" rel="noopener" href="https://github.com/{{ site.github_username }}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
         {% endif %}
         {% if site.medium_username %}
-        <a aria-label="My Medium" target="_blank" rel="noopener" href="https://medium.com/{{ site.medium_username }}"><i class="icon fa fa-medium" aria-hidden="true"></i><div><p style="font-size: medium; color: #FFFFFF;text-decoration: none;">Medium</p></div></a>
+        <a aria-label="My Medium" target="_blank" rel="noopener" href="https://medium.com/{{ site.medium_username }}"><i class="icon fa fa-medium" aria-hidden="true"></i></a>
         {% elsif site.medium_url %}
         <a aria-label="My Medium" target="_blank" rel="noopener" href="https://{{ site.medium_url }}"><i class="icon fa fa-medium" aria-hidden="true"></i></a>
         {% endif %}
